--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node-dev ./src/index.ts"
   },
   "author": "Roberto Cunha",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.1"
+    "@types/http-status-codes": "^1.2.0",
+    "express": "^4.21.1",
+    "http-status-codes": "^2.3.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.16.0"
+    "typescript": "^5.7.2"
   }
 }
