--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@types/http-status-codes": "^1.2.0",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "http-status-codes": "^2.3.0"
   },
