--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/http-status-codes": "^1.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "http-status-codes": "^2.3.0"
+    "http-status-codes": "^2.3.0",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
