--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "ts-node-dev ./src/index.ts"
   },
   "author": "Roberto Cunha",
@@ -11,13 +11,18 @@
   "description": "",
   "dependencies": {
     "@types/http-status-codes": "^1.2.0",
+    "@types/jest": "^29.5.14",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "http-status-codes": "^2.3.0",
+    "ts-jest": "^29.2.5",
     "yup": "^1.5.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2"
   }
