--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "http-status-codes": "^2.3.0",
+    "knex": "^3.1.0",
     "ts-jest": "^29.2.5",
     "yup": "^1.5.0"
   },
