--- a/package.json
+++ b/package.json
@@ -4,25 +4,32 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "ts-node-dev ./src/index.ts"
-  },
+    "start": "ts-node-dev ./src/index.ts",
+    "knex:migrate": "npx knex --knexfile ./src/server/database/knex/Environment.ts migrate:latest",
+    "knex:rollback": "npx knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback",
+    "knex:rollback-all": "npx knex --knexfile ./src/server/database/knex/Environment.ts migrate:rolback-all",
+    "knex:seed": "npx knex --knexfile ./src/server/database/knex/Environment.ts seed:run"
+   },
   "author": "Roberto Cunha",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "@types/http-status-codes": "^1.2.0",
     "@types/jest": "^29.5.14",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "http-status-codes": "^2.3.0",
     "knex": "^3.1.0",
     "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "yup": "^1.5.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "sqlite3": "^5.1.7",
     "supertest": "^7.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2"
