--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/http-status-codes": "^1.2.0",
-    "@types/jest": "^29.5.14",
-    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "http-status-codes": "^2.3.0",
+    "http-status-codes": "^2.3.0",    
     "knex": "^3.1.0",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "yup": "^1.5.0"
+    "yup": "^1.5.0",
+    "sqlite3": "^5.1.7",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
+    "ts-node": "^10.9.2",
+    "ts-jest": "^29.2.5",
+    "@types/http-status-codes": "^1.2.0",
+    "@types/jest": "^29.5.14",
     "@types/express": "^5.0.0",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
